changes in customer controller [status update api] and product with active and inactive
